@@ -1,28 +1,33 @@
 package org.irods.jargon.core.unittest.functionaltest;
 
+import java.io.File;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Properties;
 
 import junit.framework.Assert;
+import junit.framework.TestCase;
 
 import org.irods.jargon.core.connection.IRODSAccount;
+import org.irods.jargon.core.protovalues.UserTypeEnum;
+import org.irods.jargon.core.pub.CollectionAO;
+import org.irods.jargon.core.pub.CollectionAndDataObjectListAndSearchAO;
 import org.irods.jargon.core.pub.DataObjectAO;
+import org.irods.jargon.core.pub.DataTransferOperations;
 import org.irods.jargon.core.pub.IRODSFileSystem;
+import org.irods.jargon.core.pub.UserAO;
 import org.irods.jargon.core.pub.domain.AvuData;
+import org.irods.jargon.core.pub.domain.User;
 import org.irods.jargon.core.pub.io.IRODSFile;
 import org.irods.jargon.core.query.AVUQueryElement;
 import org.irods.jargon.core.query.AVUQueryElement.AVUQueryPart;
 import org.irods.jargon.core.query.AVUQueryOperatorEnum;
+import org.irods.jargon.core.query.CollectionAndDataObjectListingEntry;
 import org.irods.jargon.core.query.MetaDataAndDomainData;
 import org.irods.jargon.testutils.IRODSTestSetupUtilities;
 import org.irods.jargon.testutils.TestingPropertiesHelper;
 import org.irods.jargon.testutils.filemanip.FileGenerator;
 import org.irods.jargon.testutils.filemanip.ScratchFileUtils;
-import org.irods.jargon.testutils.icommandinvoke.IcommandInvoker;
-import org.irods.jargon.testutils.icommandinvoke.IrodsInvocationContext;
-import org.irods.jargon.testutils.icommandinvoke.icommands.ImkdirCommand;
-import org.irods.jargon.testutils.icommandinvoke.icommands.IputCommand;
 import org.junit.After;
 import org.junit.AfterClass;
 import org.junit.Before;
@@ -36,7 +41,11 @@ public class IRODSThousandFilesTest {
 	public static final String IRODS_TEST_SUBDIR_PATH = "IrodsThousandFilesTestParent";
 	private static IRODSTestSetupUtilities irodsTestSetupUtilities = null;
 	public static final String collDir = "coll";
-
+	public static final String funcTestUserPrefix = "IRODSThousandFilesTest";
+	public static final int usersCount = 100;
+	private static IRODSFileSystem irodsFileSystem;
+	private static final String testFilePrefix = "thousandFileTest";
+	private static final String testFileSuffix = ".txt";
 	@BeforeClass
 	public static void setUpBeforeClass() throws Exception {
 		TestingPropertiesHelper testingPropertiesLoader = new TestingPropertiesHelper();
@@ -49,36 +58,57 @@ public class IRODSThousandFilesTest {
 		irodsTestSetupUtilities
 				.initializeDirectoryForTest(IRODS_TEST_SUBDIR_PATH);
 
+		irodsFileSystem = IRODSFileSystem.instance();
+		IRODSAccount irodsAccount = testingPropertiesHelper
+				.buildIRODSAccountFromTestProperties(testingProperties);
+
 		// put in the thousand files
-		String testFilePrefix = "thousandFileTest";
-		String testFileSuffix = ".txt";
+
 		String absPath = scratchFileUtils
 				.createAndReturnAbsoluteScratchPath(IRODS_TEST_SUBDIR_PATH);
 
 		FileGenerator.generateManyFilesInGivenDirectory(IRODS_TEST_SUBDIR_PATH
 				+ '/' + collDir, testFilePrefix, testFileSuffix, 1000, 20, 500);
 
-		// put scratch files into irods in the right place
-		// 1000 files from 20-500K size
-		IrodsInvocationContext invocationContext = testingPropertiesHelper
-				.buildIRODSInvocationContextFromTestProperties(testingProperties);
-		IcommandInvoker invoker = new IcommandInvoker(invocationContext);
+		DataTransferOperations dto = irodsFileSystem
+				.getIRODSAccessObjectFactory().getDataTransferOperations(
+						irodsAccount);
+
 
 		// make the put subdir
 		String targetIrodsCollection = testingPropertiesHelper
 				.buildIRODSCollectionAbsolutePathFromTestProperties(
 						testingProperties, IRODS_TEST_SUBDIR_PATH);
-		ImkdirCommand iMkdirCommand = new ImkdirCommand();
-		iMkdirCommand.setCollectionName(targetIrodsCollection);
-		invoker.invokeCommandAndGetResultAsString(iMkdirCommand);
 
-		// put the files by putting the collection
-		IputCommand iputCommand = new IputCommand();
-		iputCommand.setForceOverride(true);
-		iputCommand.setIrodsFileName(targetIrodsCollection);
-		iputCommand.setLocalFileName(absPath + collDir);
-		iputCommand.setRecursive(true);
-		invoker.invokeCommandAndGetResultAsString(iputCommand);
+		IRODSFile parentDir = irodsFileSystem.getIRODSFileFactory(irodsAccount)
+				.instanceIRODSFile(targetIrodsCollection);
+		parentDir.mkdirs();
+
+		CollectionAO collectionAO = irodsFileSystem
+				.getIRODSAccessObjectFactory().getCollectionAO(irodsAccount);
+		collectionAO.setAccessPermissionInherit(irodsAccount.getZone(),
+				targetIrodsCollection, true);
+		UserAO userAO = irodsFileSystem.getIRODSAccessObjectFactory()
+				.getUserAO(irodsAccount);
+
+		String userName;
+		User user = new User();
+		for (int i = 0; i < usersCount; i++) {
+			userName = funcTestUserPrefix + i;
+			user.setName(userName);
+			user.setUserType(UserTypeEnum.RODS_USER);
+			try {
+				userAO.addUser(user);
+			} catch (Exception e) {
+
+			}
+			collectionAO.setAccessPermissionRead(irodsAccount.getZone(),
+					targetIrodsCollection, userName, true);
+		}
+
+		File sourceFile = new File(absPath + collDir);
+
+		dto.putOperation(sourceFile, parentDir, null, null);
 
 		// now add avu's to each
 		addAVUsToEachFile();
@@ -95,6 +125,7 @@ public class IRODSThousandFilesTest {
 
 	@After
 	public void tearDown() throws Exception {
+		irodsFileSystem.closeAndEatExceptions();
 	}
 
 	public static final void addAVUsToEachFile() throws Exception {
@@ -105,7 +136,6 @@ public class IRODSThousandFilesTest {
 
 		IRODSAccount account = testingPropertiesHelper
 				.buildIRODSAccountFromTestProperties(testingProperties);
-		IRODSFileSystem irodsFileSystem = IRODSFileSystem.instance();
 
 		IRODSFile irodsFile = irodsFileSystem
 				.getIRODSFileFactory(account)
@@ -143,7 +173,6 @@ public class IRODSThousandFilesTest {
 		String avu1Attrib = "avu1";
 		IRODSAccount irodsAccount = testingPropertiesHelper
 				.buildIRODSAccountFromTestProperties(testingProperties);
-		IRODSFileSystem irodsFileSystem = IRODSFileSystem.instance();
 		DataObjectAO dataObjectAO = irodsFileSystem
 				.getIRODSAccessObjectFactory().getDataObjectAO(irodsAccount);
 		List<AVUQueryElement> avuQueryElements = new ArrayList<AVUQueryElement>();
@@ -158,8 +187,187 @@ public class IRODSThousandFilesTest {
 		// should have 1000 in this batch
 		Assert.assertEquals("did not get back the  rows I requested", 1000,
 				metadataElements.size());
+	}
 
-		irodsFileSystem.close();
+	@Test
+	public void testListFilesAndCollectionsUnderPathWithAccessInfo()
+			throws Exception {
+
+		IRODSAccount irodsAccount = testingPropertiesHelper
+				.buildIRODSAccountFromTestProperties(testingProperties);
+
+		String targetIrodsCollection = testingPropertiesHelper
+				.buildIRODSCollectionAbsolutePathFromTestProperties(
+						testingProperties, IRODS_TEST_SUBDIR_PATH + "/coll");
+
+		CollectionAndDataObjectListAndSearchAO actual = irodsFileSystem
+				.getIRODSAccessObjectFactory()
+				.getCollectionAndDataObjectListAndSearchAO(irodsAccount);
+		List<CollectionAndDataObjectListingEntry> entries = actual
+				.listDataObjectsAndCollectionsUnderPathWithPermissions(targetIrodsCollection);
+		Assert.assertNotNull(entries);
+		Assert.assertFalse(entries.isEmpty());
+
+		/*
+		 * First batch is 1000 * count entries, since the last entry is not the
+		 * 'last' record, it should be dropped for the next batch. Therefore,
+		 * the result should be 1000/count - 1 entries
+		 */
+
+		int recordLimit = irodsFileSystem.getJargonProperties()
+				.getMaxFilesAndDirsQueryMax();
+		int expectedCount = recordLimit / usersCount - 1;
+
+		// should have 1000 in this batch
+		Assert.assertEquals("did not get back the  rows I requested",
+				expectedCount, entries.size());
+
+		// bounce thru entries, each has count permissions + 1 for the user that
+		// created the collection
+
+		for (CollectionAndDataObjectListingEntry entry : entries) {
+			Assert.assertEquals(
+					"did not have the expected number of permissions",
+					usersCount + 1, entry.getUserFilePermission().size());
+		}
+
+		/*
+		 * get the collection name of the last entry provided
+		 */
+		String lastPathFromInputData = entries.get(entries.size() - 1)
+				.getFormattedAbsolutePath();
+
+		System.out.println("last path:" + lastPathFromInputData);
+
+		String fileName = entries.get(entries.size() - 1).getPathOrName();
+
+		// file name like thousandFileTest141.txt
+
+		String nbrPart = fileName.substring(testFilePrefix.length(),
+				fileName.indexOf('.'));
+		System.out.println("nbrPart");
+		int nextNbr = Integer.parseInt(nbrPart) + 1;
+		
+		String expectedNextPath = testFilePrefix + nextNbr + testFileSuffix;
+
+		// now query again
+
+		entries = actual.listDataObjectsUnderPathWithPermissions(
+				targetIrodsCollection, entries.get(entries.size() - 1)
+						.getCount());
+
+		Assert.assertNotNull(entries);
+		Assert.assertFalse(entries.isEmpty());
+
+		// first entry should be for the expected next file
+		CollectionAndDataObjectListingEntry firstEntryOfSecondQuery = entries
+				.get(0);
+		TestCase.assertEquals(
+				"did not get the expected first record form the second page of entries",
+				expectedNextPath, firstEntryOfSecondQuery.getPathOrName());
+
+		CollectionAndDataObjectListingEntry lastEntryOfSecondQuery = entries
+				.get(entries.size() - 1);
+
+		expectedNextPath = testFilePrefix + 186 + testFileSuffix;
+
+		TestCase.assertEquals(
+				"did not get the expected last record form the second page of entries",
+				expectedNextPath, lastEntryOfSecondQuery.getPathOrName());
+
+		TestCase.assertFalse("should not be last record",
+				lastEntryOfSecondQuery.isLastResult());
+
+		fileName = entries.get(entries.size() - 1).getPathOrName();
+
+		// file name like thousandFileTest141.txt
+
+		nbrPart = fileName.substring(testFilePrefix.length(),
+				fileName.indexOf('.'));
+		nextNbr = Integer.parseInt(nbrPart) + 1;
+
+		expectedNextPath = testFilePrefix + nextNbr + testFileSuffix;
+
+		// now query again
+
+		entries = actual.listDataObjectsUnderPathWithPermissions(
+				targetIrodsCollection, entries.get(entries.size() - 1)
+						.getCount());
+
+		Assert.assertNotNull(entries);
+		Assert.assertFalse(entries.isEmpty());
+
+		CollectionAndDataObjectListingEntry firstEntryOfThirdQuery = entries
+				.get(0);
+
+		TestCase.assertEquals(
+				"did not get the expected first record form the third page of entries",
+				expectedNextPath, firstEntryOfThirdQuery.getPathOrName());
+
+		// should be one more page of results
+
+		CollectionAndDataObjectListingEntry lastEntryOfThirdQuery = entries
+				.get(entries.size() - 1);
+
+		TestCase.assertFalse("should be a fouth page of results",
+				lastEntryOfThirdQuery.isLastResult());
+
+		// now query again
+
+		entries = actual.listDataObjectsUnderPathWithPermissions(
+				targetIrodsCollection, entries.get(entries.size() - 1)
+						.getCount());
+
+		Assert.assertNotNull(entries);
+		Assert.assertFalse(entries.isEmpty());
+
+		// last should be 274, query again
+		CollectionAndDataObjectListingEntry lastEntryOfFourthQuery = entries
+				.get(entries.size() - 1);
+
+		TestCase.assertFalse("should be a fifth page of results",
+				lastEntryOfFourthQuery.isLastResult());
+
+		fileName = lastEntryOfFourthQuery.getPathOrName();
+
+		nbrPart = fileName.substring(testFilePrefix.length(),
+				fileName.indexOf('.'));
+		nextNbr = Integer.parseInt(nbrPart) + 1;
+
+		expectedNextPath = testFilePrefix + nextNbr + testFileSuffix;
+
+		entries = actual.listDataObjectsUnderPathWithPermissions(
+				targetIrodsCollection, entries.get(entries.size() - 1)
+						.getCount());
+
+		Assert.assertNotNull(entries);
+		Assert.assertFalse(entries.isEmpty());
+
+		CollectionAndDataObjectListingEntry firstEntryOfFifthQuery = entries
+				.get(0);
+
+		TestCase.assertEquals(
+				"did not get the expected first record form the third page of entries",
+				expectedNextPath, firstEntryOfFifthQuery.getPathOrName());
+
+		// now just page through till last page
+
+		while (true) {
+			entries = actual.listDataObjectsUnderPathWithPermissions(
+					targetIrodsCollection, entries.get(entries.size() - 1)
+							.getCount());
+			CollectionAndDataObjectListingEntry lastEntryOfLoopedQuery = entries
+					.get(entries.size() - 1);
+			if (lastEntryOfLoopedQuery.isLastResult() == true) {
+				break;
+			}
+
+		}
+
+		// System.out.println("got to last entry");
+
+		// here we just want to know that we made it out of the loop
+		Assert.assertTrue(true);
 
 	}
 
